# complete-cicd

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  README.md  mise.toml  release-please-config.json
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  e2e-tests.yaml  frontend-tests.yaml  update-gitops.yaml
kubernetes/: e2e_test.py  pyproject.toml  setup_cluster_gitops  setup_cluster_local  setup_cluster_minimal  setup_gitops
scripts/: setup  setup_deploy_key  setup_project  update_kustomize_tag
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/src/backend/: main.py
src/demo/: Dockerfile
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
