[project]
name = "study-tracker-backend"
version = "0.2.0"
description = "Backend API for tracking study time for DevOps certifications"
readme = "README.md"
authors = [{ name = "Thomas PRETAT", email = "thomas@example.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "uvicorn>=0.45.0",
]

[project.scripts]
study-tracker-api = "backend.main:main"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
